Updated design with professional layout

--- a/index.html
+++ b/index.html
@@ -4,24 +4,34 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Comms Black Mobile</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Welcome to Comms Black Mobile</h1>
+    <div class="container">
+      <h1>Comms Black Mobile</h1>
+      <nav>
+        <a href="#services">Services</a>
+        <a href="#contact">Contact</a>
+      </nav>
+    </div>
   </header>
+
   <main>
-    <section>
+    <section id="services">
       <h2>Our Services</h2>
-      <p>We offer top-notch mobile communication solutions for businesses and individuals.</p>
+      <p>We offer top-notch mobile communication solutions tailored for businesses and individuals. From custom plans to expert advice, we’ve got you covered.</p>
     </section>
-    <section>
+
+    <section id="contact">
       <h2>Contact Us</h2>
-      <p>Email: info@commsblackmobile.com</p>
+      <p>Email: <a href="mailto:info@commsblackmobile.com">info@commsblackmobile.com</a></p>
     </section>
   </main>
+
   <footer>
-    <p>&copy; 2025 Comms Black Mobile</p>
+    <p>&copy; 2025 Comms Black Mobile. All rights reserved.</p>
   </footer>
 </body>
 </html>
