Updated website with latest changes

--- a/index.html
+++ b/index.html
@@ -1,38 +1,62 @@
-<!-- This is a test change -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Comms Black Mobile</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <title>Comms Black Mobile - Secure Communication</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <div class="container">
-      <h1>Comms Black Mobile</h1>
-      <nav>
-        <a href="#services">Services</a>
-        <a href="#contact">Contact</a>
-      </nav>
-    </div>
+    <h1>Comms Black Mobile</h1>
+    <p class="tagline">Secure · Private · Anonymous · Off-Grid</p>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="products.html">Products</a></li>
+        <li><a href="academy.html">Academy</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
   </header>
 
   <main>
-    <section id="services">
-      <h2>Our Services</h2>
-      <p>We offer top-notch mobile communication solutions tailored for businesses and individuals. From custom plans to expert advice, we’ve got you covered.</p>
+    <section class="intro">
+      <h2>Freedom in Your Pocket</h2>
+      <p>
+        Comms Black Mobile provides hardened communication suites built for those who value
+        <strong>security, privacy, anonymity, and off-grid resilience</strong>.
+      </p>
     </section>
 
-    <section id="contact">
-      <h2>Contact Us</h2>
-      <p>Email: <a href="mailto:info@commsblackmobile.com">info@commsblackmobile.com</a></p>
+    <section class="highlights">
+      <div class="highlight-card">
+        <h3>Secure</h3>
+        <p>All devices run <strong>GrapheneOS</strong> with locked-down privacy features.</p>
+      </div>
+      <div class="highlight-card">
+        <h3>Private</h3>
+        <p>No tracking, no backdoors — only the essentials you control.</p>
+      </div>
+      <div class="highlight-card">
+        <h3>Anonymous</h3>
+        <p>Anonymous eSIMs and XMR payments keep your identity protected.</p>
+      </div>
+      <div class="highlight-card">
+        <h3>Off-Grid</h3>
+        <p>Starlink Mini and Nitrowall routers extend comms beyond cell towers.</p>
+      </div>
+    </section>
+
+    <section class="cta">
+      <h2>Explore Our Communication Suites</h2>
+      <p>From everyday privacy to full off-grid capability.</p>
+      <a href="products.html" class="button">View Products</a>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 Comms Black Mobile. All rights reserved.</p>
+    <p>© 2025 Comms Black Mobile</p>
   </footer>
 </body>
 </html>
