--- a/faq.html
+++ b/faq.html
@@ -1,108 +1,81 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Comms Black Mobile - FAQ</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>FAQ’s — Comms Black Mobile</title>
+  <meta name="description" content="Frequently Asked Questions — Comms Black Mobile answers to common queries about products, services, and policies." />
+
+  <!-- SEO & Social -->
+  <meta property="og:title" content="Comms Black Mobile — FAQ’s" />
+  <meta property="og:description" content="Answers to common questions about mobile repairs, accessories, security solutions, and more." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://civpronto.github.io/comms-black-mobile/faqs.html" />
+  <meta property="og:image" content="https://civpronto.github.io/comms-black-mobile/assets/img/logo.png" />
+  <meta name="twitter:card" content="summary_large_image" />
+
+  <!-- Security -->
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' data: https:; style-src 'self' 'unsafe-inline'; script-src 'self';" />
+
+  <link rel="stylesheet" href="/comms-black-mobile/assets/css/styles.css">
 </head>
 <body>
-  <!-- Header / Navbar -->
-  <header>
-    <div class="logo">Comms Black Mobile</div>
-    <nav>
-      <ul>
-        <li><a href="index.html">Mission</a></li>
-        <li><a href="products.html">Products</a></li>
-        <li><a href="academy.html">Academy</a></li>
-        <li><a href="faq.html" class="active">FAQ's</a></li>
-        <li><a href="testimonials.html">Testimonials</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
+  <header class="site-header">
+    <div class="container header-inner">
+      <a href="/comms-black-mobile/" class="brand">
+        <img src="/comms-black-mobile/assets/img/logo.svg" width="32" height="32" alt="Comms Black Mobile logo">
+        Comms Black Mobile
+      </a>
+      <nav class="nav">
+        <ul>
+          <li><a href="/comms-black-mobile/">Mission</a></li>
+          <li><a href="/comms-black-mobile/products.html">Products</a></li>
+          <li><a href="/comms-black-mobile/academy.html">Academy</a></li>
+          <li><a href="/comms-black-mobile/faqs.html" aria-current="page">FAQ’s</a></li>
+          <li><a href="/comms-black-mobile/contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
-  <!-- FAQ Page -->
-  <main>
-    <h1>Frequently Asked Questions</h1>
+  <main class="section">
+    <div class="container">
+      <h1>Frequently Asked Questions</h1>
+      <p class="lead">Here you’ll find answers to the most common questions our customers ask. If you don’t see your question here, reach out via our contact page.</p>
 
-    <section class="faq">
-      <h2>💡 General</h2>
-      <div class="faq-item">
-        <h3>What is Comms Black Mobile?</h3>
-        <p>
-          Comms Black Mobile provides hardened mobile communication suites built on GrapheneOS, 
-          preconfigured for privacy, security, and operational freedom.
-        </p>
-      </div>
-      <div class="faq-item">
-        <h3>Who are these products for?</h3>
-        <p>
-          Journalists, activists, researchers, professionals, and everyday people who want digital independence.
-        </p>
-      </div>
-    </section>
+      <section class="faq">
+        <h2>Do you charge for viewing Academy content?</h2>
+        <p>No. The Academy is 100% free to access. Our goal is to make mobile knowledge available to everyone.</p>
+      </section>
 
-    <section class="faq">
-      <h2>📱 Devices</h2>
-      <div class="faq-item">
-        <h3>What phones do you support?</h3>
-        <p>
-          Currently we build on the Google Pixel 8a running GrapheneOS.  
-          Pixels are chosen for verified boot, open documentation, and long-term support.
-        </p>
-      </div>
-      <div class="faq-item">
-        <h3>Can I use my existing SIM?</h3>
-        <p>
-          Yes. The "Everyday Aussie" suite uses your current SIM.  
-          More advanced suites use anonymous eSIMs via Silent.Link or operate fully air-gapped.
-        </p>
-      </div>
-    </section>
+      <section class="faq">
+        <h2>How long do repairs take?</h2>
+        <p>Most repairs can be completed within 24–48 hours, depending on parts availability and the type of service.</p>
+      </section>
 
-    <section class="faq">
-      <h2>💰 Payments</h2>
-      <div class="faq-item">
-        <h3>What currencies do you accept?</h3>
-        <p>
-          Prices are listed in AUD and Monero (XMR).  
-          You may pay directly in AUD (converted to XMR in backend) or in XMR for a 5% discount.
-        </p>
-      </div>
-      <div class="faq-item">
-        <h3>Why Monero (XMR)?</h3>
-        <p>
-          Monero provides private, censorship-resistant payments.  
-          We never require linking to a bank account.
-        </p>
-      </div>
-    </section>
+      <section class="faq">
+        <h2>Do your accessories come with a warranty?</h2>
+        <p>Yes. All accessories are backed by a 6-month warranty covering manufacturing defects.</p>
+      </section>
 
-    <section class="faq">
-      <h2>🔐 Security</h2>
-      <div class="faq-item">
-        <h3>Can Comms Black Mobile guarantee my privacy?</h3>
-        <p>
-          No technology can guarantee absolute privacy.  
-          What we provide is hardened systems, education, and tools for strong digital independence.  
-          Security is a process — the Academy teaches how to apply these tools properly.
-        </p>
-      </div>
-      <div class="faq-item">
-        <h3>What about updates?</h3>
-        <p>
-          Devices receive regular GrapheneOS updates. We encourage customers to apply them promptly.  
-          All apps (Signal, Tor, VPN, etc.) are updated directly from trusted repositories.
-        </p>
-      </div>
-    </section>
+      <section class="faq">
+        <h2>Can I request a custom consultation?</h2>
+        <p>Absolutely. We provide tailored advice and security-focused consultations. Just head over to our Contact page to book.</p>
+      </section>
+
+      <section class="faq">
+        <h2>How do you ensure customer data security?</h2>
+        <p>We follow strict privacy practices, minimize data collection, and never share your personal details with third parties without consent.</p>
+      </section>
+    </div>
   </main>
 
-  <!-- Footer -->
-  <footer>
-    <p>© 2025 Comms Black Mobile. All rights reserved.</p>
-    <p>Contact only via Signal: <strong>commsblack.10</strong></p>
+  <footer class="site-footer">
+    <div class="container footer-grid">
+      <p class="muted">© <span data-year></span> Comms Black Mobile — All rights reserved.</p>
+    </div>
   </footer>
+
+  <script src="/comms-black-mobile/assets/js/main.js" defer></script>
 </body>
 </html>
