--- a/index.html
+++ b/index.html
@@ -1,62 +1,76 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Comms Black Mobile - Secure Communication</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Mission — Comms Black Mobile</title>
+  <meta name="description" content="Comms Black Mobile — Our mission is to provide reliable mobile communication, repairs, and knowledge to empower users everywhere." />
+
+  <!-- SEO & Social -->
+  <meta property="og:title" content="Comms Black Mobile — Mission" />
+  <meta property="og:description" content="Our mission is to provide reliable mobile communication, repairs, and knowledge to empower users everywhere." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://civpronto.github.io/comms-black-mobile/" />
+  <meta property="og:image" content="https://civpronto.github.io/comms-black-mobile/assets/img/logo.png" />
+  <meta name="twitter:card" content="summary_large_image" />
+
+  <!-- Security -->
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' data: https:; style-src 'self' 'unsafe-inline'; script-src 'self';" />
+
+  <link rel="stylesheet" href="/comms-black-mobile/assets/css/styles.css">
 </head>
 <body>
-  <header>
-    <h1>Comms Black Mobile</h1>
-    <p class="tagline">Secure · Private · Anonymous · Off-Grid</p>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="products.html">Products</a></li>
-        <li><a href="academy.html">Academy</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
+  <header class="site-header">
+    <div class="container header-inner">
+      <a href="/comms-black-mobile/" class="brand">
+        <img src="/comms-black-mobile/assets/img/logo.svg" width="32" height="32" alt="Comms Black Mobile logo">
+        Comms Black Mobile
+      </a>
+      <nav class="nav">
+        <ul>
+          <li><a href="/comms-black-mobile/" aria-current="page">Mission</a></li>
+          <li><a href="/comms-black-mobile/products.html">Products</a></li>
+          <li><a href="/comms-black-mobile/academy.html">Academy</a></li>
+          <li><a href="/comms-black-mobile/faqs.html">FAQ’s</a></li>
+          <li><a href="/comms-black-mobile/contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
-  <main>
-    <section class="intro">
-      <h2>Freedom in Your Pocket</h2>
-      <p>
-        Comms Black Mobile provides hardened communication suites built for those who value
-        <strong>security, privacy, anonymity, and off-grid resilience</strong>.
-      </p>
-    </section>
+  <main class="section">
+    <div class="container">
+      <h1>Our Mission</h1>
+      <p class="lead">At <strong>Comms Black Mobile</strong>, we believe in keeping people connected through affordable, reliable, and secure mobile solutions. Our mission blends technology, education, and service to empower every user.</p>
 
-    <section class="highlights">
-      <div class="highlight-card">
-        <h3>Secure</h3>
-        <p>All devices run <strong>GrapheneOS</strong> with locked-down privacy features.</p>
-      </div>
-      <div class="highlight-card">
-        <h3>Private</h3>
-        <p>No tracking, no backdoors — only the essentials you control.</p>
-      </div>
-      <div class="highlight-card">
-        <h3>Anonymous</h3>
-        <p>Anonymous eSIMs and XMR payments keep your identity protected.</p>
-      </div>
-      <div class="highlight-card">
-        <h3>Off-Grid</h3>
-        <p>Starlink Mini and Nitrowall routers extend comms beyond cell towers.</p>
-      </div>
-    </section>
+      <section class="mission-block">
+        <h2>About Us</h2>
+        <p>We are a mobile communications and repair service provider committed to transparency, quality, and accessibility. Whether it’s a broken screen, a drained battery, or a question about protecting your data, we’re here to help.</p>
+      </section>
 
-    <section class="cta">
-      <h2>Explore Our Communication Suites</h2>
-      <p>From everyday privacy to full off-grid capability.</p>
-      <a href="products.html" class="button">View Products</a>
-    </section>
+      <section class="mission-block">
+        <h2>What Drives Us</h2>
+        <p>Technology moves fast, but our focus is simple: reliability, trust, and knowledge-sharing. We don’t just repair devices — we give people the tools and confidence to stay connected in today’s digital world.</p>
+      </section>
+
+      <section class="mission-block">
+        <h2>Why Comms Black Mobile?</h2>
+        <ul>
+          <li>✔ Affordable repairs without hidden costs</li>
+          <li>✔ Free educational resources via our Academy</li>
+          <li>✔ Strong focus on data privacy and user security</li>
+          <li>✔ Friendly, community-first approach</li>
+        </ul>
+      </section>
+    </div>
   </main>
 
-  <footer>
-    <p>© 2025 Comms Black Mobile</p>
+  <footer class="site-footer">
+    <div class="container footer-grid">
+      <p class="muted">© <span data-year></span> Comms Black Mobile — All rights reserved.</p>
+    </div>
   </footer>
+
+  <script src="/comms-black-mobile/assets/js/main.js" defer></script>
 </body>
 </html>
