--- a/academy.html
+++ b/academy.html
@@ -1,77 +1,67 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Comms Black Mobile - Academy</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Academy — Comms Black Mobile</title>
+  <meta name="description" content="Comms Black Mobile Academy — free knowledge hub with tips, guides, and insights on mobile technology, security, and repairs." />
+
+  <!-- SEO & Social -->
+  <meta property="og:title" content="Comms Black Mobile — Academy" />
+  <meta property="og:description" content="Free knowledge hub with tips, guides, and insights on mobile technology, security, and repairs." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://civpronto.github.io/comms-black-mobile/academy.html" />
+  <meta property="og:image" content="https://civpronto.github.io/comms-black-mobile/assets/img/logo.png" />
+  <meta name="twitter:card" content="summary_large_image" />
+
+  <!-- Security -->
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src 'self' data: https:; style-src 'self' 'unsafe-inline'; script-src 'self';" />
+
+  <link rel="stylesheet" href="/comms-black-mobile/assets/css/styles.css">
 </head>
 <body>
-  <!-- Header / Navbar -->
-  <header>
-    <div class="logo">Comms Black Mobile</div>
-    <nav>
-      <ul>
-        <li><a href="index.html">Mission</a></li>
-        <li><a href="products.html">Products</a></li>
-        <li><a href="academy.html" class="active">Academy</a></li>
-        <li><a href="faq.html">FAQ's</a></li>
-        <li><a href="testimonials.html">Testimonials</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
+  <header class="site-header">
+    <div class="container header-inner">
+      <a href="/comms-black-mobile/" class="brand">
+        <img src="/comms-black-mobile/assets/img/logo.svg" width="32" height="32" alt="Comms Black Mobile logo">
+        Comms Black Mobile
+      </a>
+      <nav class="nav">
+        <ul>
+          <li><a href="/comms-black-mobile/">Mission</a></li>
+          <li><a href="/comms-black-mobile/products.html">Products</a></li>
+          <li><a href="/comms-black-mobile/academy.html" aria-current="page">Academy</a></li>
+          <li><a href="/comms-black-mobile/faqs.html">FAQ’s</a></li>
+          <li><a href="/comms-black-mobile/contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
-  <!-- Academy Page -->
-  <main>
-    <h1>Comms Black Academy</h1>
-    <p class="intro">
-      Knowledge is freedom. Our Academy gives you the tools to protect your privacy, 
-      strengthen your security, and reclaim your digital independence.  
-      Learn at your own pace — from beginner-friendly guides to advanced privacy tradecraft.
-    </p>
+  <main class="section">
+    <div class="container">
+      <h1>Academy</h1>
+      <p class="lead">The Comms Black Mobile Academy is a free knowledge hub — no logins, no fees, just practical guidance to help you get the most from your mobile devices.</p>
 
-    <!-- Learning Modules -->
-    <section class="academy-modules">
-      <div class="module">
-        <h2>📱 Mobile Privacy Basics</h2>
-        <p>Setup, hardening, and secure daily use of GrapheneOS-powered devices.</p>
-      </div>
+      <article class="blog-entry">
+        <h2>Mobile Basics</h2>
+        <p>Learn the fundamentals of smartphones, operating systems, and everyday maintenance. From setting up your first device to keeping it updated, this section covers the essentials.</p>
+      </article>
 
-      <div class="module">
-        <h2>🌐 Anonymous Communications</h2>
-        <p>Using Signal, Monero, Tor, and VPNs effectively while avoiding surveillance traps.</p>
-      </div>
+      <article class="blog-entry">
+        <h2>DIY Repairs</h2>
+        <p>Step-by-step guides for diagnosing and fixing common issues like screen cracks, weak batteries, and water damage. Always proceed carefully and know when professional help is best.</p>
+      </article>
 
-      <div class="module">
-        <h2>🛰️ Off-Grid & Air-Gapped Operations</h2>
-        <p>How to operate with Nitrowall routers, satellite internet, and air-gapped devices.</p>
-      </div>
+      <article class="blog-entry">
+        <h2>Data Security</h2>
+        <p>Understand how to protect your personal information, avoid scams, and use privacy tools effectively. Digital safety is just as important as physical device care.</p>
+      </article>
 
-      <div class="module">
-        <h2>💰 Financial Privacy</h2>
-        <p>Using XMR (Monero), privacy wallets, and avoiding common OPSEC mistakes.</p>
-      </div>
+      <article class="blog-entry">
+        <h2>Advanced Tips</h2>
+        <p>Explore hidden features, optimization hacks, and advanced configurations to make your device faster, safer, and more efficient.</p>
+      </article>
 
-      <div class="module">
-        <h2>🛡️ Threat Modeling</h2>
-        <p>Learn how to identify risks, create layered defenses, and build operational discipline.</p>
-      </div>
-    </section>
-
-    <!-- Call to Action -->
-    <section class="cta">
-      <h2>Ready to start learning?</h2>
-      <p>Our modules are free with every Comms Black Mobile purchase.  
-      Independent learners can subscribe with XMR.</p>
-      <a href="contact.html" class="btn">Get Access</a>
-    </section>
-  </main>
-
-  <!-- Footer -->
-  <footer>
-    <p>© 2025 Comms Black Mobile. All rights reserved.</p>
-    <p>Contact only via Signal: <strong>commsblack.10</strong></p>
-  </footer>
-</body>
-</html>
+      <article class="blog-entry">
+        <h2>Fut
